--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": "~5.0"
+        "php": ">=7.4",
+        "illuminate/support": "^11.0"
     },
     "autoload": {
         "psr-0": {
