--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": ">=7.4",
-        "illuminate/support": "^6.0"
+        "illuminate/support": "^7.0",
+        "laravel/helpers": "^1.7"
     },
     "autoload": {
         "psr-0": {
