--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
-        "illuminate/support": "^8.0",
+        "php": "^8.2.0",
+        "illuminate/support": "^9.0",
         "laravel/helpers": "^1.7"
     },
     "autoload": {
