--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
         }
     ],
     "require": {
-        "php": ">=8.2",
-        "illuminate/support": "^11.0"
+        "php": "^8.2.0",
+        "illuminate/support": "^11.0",
+        "laravel/helpers": "^1.7"
     },
     "autoload": {
         "psr-0": {
